--- a/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
@@ -1,11 +1,11 @@
 spring:
   data:
     mongodb:
-      host: localhost
-      port: 27017
+      host: ${MONGOHOST}
+      port: ${MONGOPORT}
       database: quotes
-      username: root
-      password: mongodb
+      username: ${MONGOUSER}
+      password: ${MONGOPASSWORD}
   boot:
     admin:
       client:
