--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -10,6 +10,8 @@ spring:
 
 
 eureka:
+  instance:
+    hostname: https://prospect-leads-product-service.up.railway.app
   client:
     enabled: true
     register-with-eureka: true
