--- a/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
@@ -15,7 +15,7 @@ spring:
 
 eureka:
   instance:
-    hostname: https://prospect-leads-lead-service.up.railway.app
+    hostname: prospect-leads-lead-service.up.railway.app
   client:
     enabled: true
     register-with-eureka: true
