--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -11,7 +11,7 @@ spring:
 
 eureka:
   instance:
-    hostname: https://prospect-leads-product-service.up.railway.app
+    hostname: prospect-leads-product-service.up.railway.app
   client:
     enabled: true
     register-with-eureka: true
