--- a/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
@@ -13,7 +13,7 @@ spring:
 
 eureka:
   instance:
-    hostname: https://prospect-leads-quote-service.up.railway.app
+    hostname: prospect-leads-quote-service.up.railway.app
   client:
     enabled: true
     register-with-eureka: true
