--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -17,9 +17,11 @@
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
     "@angular/material": "^16.1.3",
+    "@angular/material-moment-adapter": "^16.2.5",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "moment": "^2.29.4",
     "ng2-currency-mask": "^13.0.3",
     "rxjs": "~7.8.0",
     "snake-case": "^3.0.4",
