--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -6,14 +6,13 @@ spring:
   boot:
     admin:
       client:
-        url: https://service-discovery.up.railway.app/admin
-
+        url: https://service-discovery.railway.internal/admin
 
 eureka:
   instance:
-    hostname: prospect-leads-product-service.up.railway.app
+    hostname: prospect-leads-product-service.railway.internal
   client:
     enabled: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: https://service-discovery.up.railway.app/eureka/
+      defaultZone: https://service-discovery.railway.internal/eureka/
