--- a/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
@@ -9,16 +9,16 @@ spring:
   boot:
     admin:
       client:
-        url: https://service-discovery.up.railway.app/admin
+        url: https://service-discovery.railway.internal/admin
 
 eureka:
   instance:
-    hostname: prospect-leads-quote-service.up.railway.app
+    hostname: prospect-leads-quote-service.railway.internal
   client:
     enabled: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: https://service-discovery.up.railway.app/eureka/
+      defaultZone: https://service-discovery.railway.internal/eureka/
 
 
 webservice:
