--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -10,7 +10,7 @@ spring:
 
 eureka:
   instance:
-    hostname: prospect-leads-product-service.railway.internal
+    prefer-ip-address: true
   client:
     enabled: true
     register-with-eureka: true
