--- a/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
@@ -13,7 +13,7 @@ spring:
 
 eureka:
   instance:
-    hostname: prospect-leads-quote-service.railway.internal
+    prefer-ip-address: true
   client:
     enabled: true
     register-with-eureka: true
