--- a/app/infra/railway/localstack/Dockerfile
+++ b/app/infra/railway/localstack/Dockerfile
@@ -6,7 +6,7 @@ ENV DEFAULT_REGION=sa-east-1
 ENV HOSTNAME=localstack
 ENV DOCKER_HOST=unix:///var/run/docker.sock
 
-RUN chmod +x ready.d/init.sh
+RUN chmod +x aws-scripts/dynamodb.sh
 COPY aws-scripts/ /etc/localstack/init/ready.d/
 
 EXPOSE 53
