--- a/app/infra/docker-compose.yaml
+++ b/app/infra/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   localstack:
     container_name: localstack
-    image: localstack/localstack:2.1.0
+    image: localstack/localstack:1.4.0
     ports:
       - "127.0.0.1:53:53"                # only required for Pro (DNS)
       - "127.0.0.1:53:53/udp"            # only required for Pro (DNS)
@@ -11,17 +11,12 @@ services:
       - "127.0.0.1:4510-4559:4510-4559"  # external service port range
       - "127.0.0.1:4566:4566"            # LocalStack Edge Proxy
     environment:
-      - DEBUG=${DEBUG-}
-      - DATA_DIR=${DATA_DIR-}
-      - LAMBDA_EXECUTOR=${LAMBDA_EXECUTOR-}
-      - LOCALSTACK_API_KEY=${LOCALSTACK_API_KEY-}  # only required for Pro
-      - HOST_TMP_FOLDER=${TMPDIR:-/tmp/}localstack
+      - DEBUG=0
       - DOCKER_HOST=unix:///var/run/docker.sock
       - HOSTNAME_EXTERNAL=localstack
     volumes:
-      - "${TMPDIR:-/tmp}/localstack:/tmp/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
-      - ./aws-scripts/:/etc/localstack/init/ready.d
+      - ./aws-scripts/:/docker-entrypoint-initaws.d/
       
   postgres:
     image: postgres
