--- a/app/infra/railway/localstack/Dockerfile
+++ b/app/infra/railway/localstack/Dockerfile
@@ -1,27 +1,13 @@
-FROM localstack/localstack:2.1.0
+FROM localstack/localstack:1.4.0
 
-RUN pip install awscli
-
+ENV DEBUG=0
 ENV DEFAULT_REGION=sa-east-1
 ENV HOSTNAME=localstack
 ENV DOCKER_HOST=unix:///var/run/docker.sock
 
-RUN chmod +x aws-scripts/dynamodb.sh
-COPY aws-scripts/ /etc/localstack/init/ready.d/
+COPY aws-scripts/ /docker-entrypoint-initaws.d/
 
 EXPOSE 53
 EXPOSE 443
 EXPOSE 4566
 EXPOSE 4510-4559
-
-#RUN aws configure set aws_access_key_id default_access_key --profile=localstack
-#RUN aws configure set aws_secret_access_key default_secret_key --profile=localstack 
-#RUN aws configure set region sa-east-1 --profile=localstack 
-#RUN aws dynamodb create-table --table-name Leads \
-#        --attribute-definitions AttributeName=Id,AttributeType=S \
-#        --key-schema AttributeName=Id,KeyType=HASH \
-#        --billing-mode PAY_PER_REQUEST \
-#        --endpoint http://localstack:4566 \
-#        --region sa-east-1 \
-#        --profile=localstack
-
