--- a/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
@@ -12,6 +12,10 @@ spring:
     admin:
       client:
         url: https://service-discovery.up.railway.app/admin
+  kafka:
+    bootstrap-servers: kafka.railway.internal:9092
+    properties:
+      schema.registry.url: http://schema-registry.railway.internal:8081
 
 eureka:
   instance:
@@ -24,7 +28,7 @@ eureka:
 
 aws:
   dynamodb:
-    endpoint: dynamodb.railway.internal:8000
+    endpoint: http://localstack.railway.internal:4566
     region: sa-east-1
     credentials:
       access-key: foo
