--- a/app/backend/service-discovery/src/main/resources/application.yml
+++ b/app/backend/service-discovery/src/main/resources/application.yml
@@ -9,6 +9,8 @@ server:
     port: 8761
 
 eureka:
+  server:
+    enable-self-preservation: false
   client:
     fetch-registry: false
     register-with-eureka: false
