--- a/app/infra/railway/broker/Dockerfile
+++ b/app/infra/railway/broker/Dockerfile
@@ -5,7 +5,7 @@ FROM confluentinc/cp-server:5.4.0
 ENV KAFKA_BROKER_ID 1
 ENV KAFKA_ZOOKEEPER_CONNECT "zookeeper.railway.internal:2181"
 ENV KAFKA_LISTENER_SECURITY_PROTOCOL_MAP "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
-ENV KAFKA_ADVERTISED_LISTENERS "PLAINTEXT://kafka.railway.internal:29092,PLAINTEXT_HOST://localhost:9092"
+ENV KAFKA_ADVERTISED_LISTENERS "PLAINTEXT://kafka.railway.internal:29092,PLAINTEXT_HOST://kafka.railway.internal:9092"
 ENV KAFKA_METRIC_REPORTERS "io.confluent.metrics.reporter.ConfluentMetricsReporter"
 ENV KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR 1
 ENV KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS 0
