--- a/app/infra/railway/broker/Dockerfile
+++ b/app/infra/railway/broker/Dockerfile
@@ -7,6 +7,7 @@ ENV KAFKA_ZOOKEEPER_CONNECT "zookeeper.railway.internal:2181"
 ENV KAFKA_LISTENER_SECURITY_PROTOCOL_MAP "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
 ENV KAFKA_ADVERTISED_LISTENERS "PLAINTEXT://kafka.railway.internal:29092,PLAINTEXT_HOST://kafka.railway.internal:9092"
 ENV KAFKA_METRIC_REPORTERS "io.confluent.metrics.reporter.ConfluentMetricsReporter"
+ENV KAFKA_INTER_BROKER_LISTENER_NAME "INTERNAL"
 ENV KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR 1
 ENV KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS 0
 ENV KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR 1
