--- a/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
@@ -9,7 +9,7 @@ spring:
       pool:
         enabled: true
   kafka:
-    bootstrap-servers: apache-kafka.up.railway.app:29092
+    bootstrap-servers: kafka.railway.internal:29092
     properties:
       schema.registry.url: http://schema-registry.railway.internal:8081      
 
