--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -6,7 +6,7 @@ spring:
   boot:
     admin:
       client:
-        url: https://service-discovery.railway.internal/admin
+        url: https://service-discovery.up.railway.app/admin/
 
 eureka:
   instance:
@@ -15,4 +15,4 @@ eureka:
     enabled: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: https://service-discovery.railway.internal/eureka/
+      defaultZone: https://service-discovery.up.railway.app/eureka/
