--- a/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
@@ -11,7 +11,7 @@ spring:
   boot:
     admin:
       client:
-        url: https://service-discovery.railway.internal/admin
+        url: https://service-discovery.up.railway.app/admin/
 
 eureka:
   instance:
@@ -20,7 +20,7 @@ eureka:
     enabled: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: https://service-discovery.railway.internal/eureka/
+      defaultZone: https://service-discovery.up.railway.app/eureka/
 
 
 webservice:
