Fix notification service

--- a/app/backend/notification-service/build.gradle
+++ b/app/backend/notification-service/build.gradle
@@ -44,6 +44,7 @@ subprojects {
 		set('springBootVersion', "2.7.13")
 		set('springCloudVersion', "2021.0.7")
 		set('springCloudAwsVersion', "2.4.4")
+		set('springAdminVersion', "2.7.11")
 		set('avroVersion', "1.11.2")
 		set('confluentVersion', "7.4.0")
 		set('logstashVersion', "7.4")
@@ -61,6 +62,7 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-actuator'
 		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+		implementation "de.codecentric:spring-boot-admin-starter-client:${springAdminVersion}"
 		implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
