Update admin config url

--- a/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
@@ -12,6 +12,8 @@ spring:
     admin:
       client:
         url: https://service-discovery.up.railway.app/admin/
+        instance:
+          service-url: https://service-discovery.up.railway.app/admin/
 
 eureka:
   instance:
