--- a/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
@@ -7,6 +7,8 @@ spring:
     admin:
       client:
         url: https://service-discovery.up.railway.app/admin/
+        instance:
+          service-url: https://service-discovery.up.railway.app/admin/
 
 eureka:
   instance:
