Update health check

--- a/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
@@ -17,7 +17,7 @@ spring:
 
 eureka:
   instance:
-    prefer-ip-address: true
+    health-check-url: https://prospect-leads-product-service.up.railway.app/actuator/health
   client:
     enabled: true
     register-with-eureka: true
