--- a/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
@@ -18,6 +18,7 @@ spring:
 eureka:
   instance:
     health-check-url: https://prospect-leads-product-service.up.railway.app/actuator/health
+    hostname: prospect-leads-product-service.up.railway.app
   client:
     enabled: true
     register-with-eureka: true
