Fix endpoint eureka client

--- a/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
@@ -17,8 +17,7 @@ spring:
 
 eureka:
   instance:
-    health-check-url: https://prospect-leads-product-service.up.railway.app/actuator/health
-    hostname: prospect-leads-product-service.up.railway.app
+    hostname: prospect-leads-bff-service.railway.internal
   client:
     enabled: true
     register-with-eureka: true
