--- a/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
@@ -15,7 +15,7 @@ spring:
 
 eureka:
   instance:
-    prefer-ip-address: true
+    hostname: prospect-leads-quote-service.railway.internal
   client:
     enabled: true
     register-with-eureka: true
