--- a/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
@@ -12,7 +12,7 @@ spring:
 
 eureka:
   instance:
-    prefer-ip-address: true
+    hostname: prospect-leads-notification-service.railway.internal
   client:
     enabled: true
     register-with-eureka: true
