--- a/app/backend/notification-service/configuration/src/main/resources/application-dev.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-dev.yml
@@ -1,3 +1,10 @@
+spring:
+  cloud:
+    aws:
+      ses:
+        enabled: true
+        endpoint: http://localhost:4566
+        region: sa-east-1
 eureka:
   client:
     enabled: false
