Fix SES Endpoint

--- a/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
@@ -3,7 +3,7 @@ spring:
     aws:
       ses:
         enabled: true
-        endpoint: http://localstack:4566
+        endpoint: http://localstack.railway.internal:4566
         region: sa-east-1
   kafka:
     bootstrap-servers: kafka.railway.internal:29092
