--- a/app/frontend/angular.json
+++ b/app/frontend/angular.json
@@ -43,8 +43,7 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true,
-              "outputHashing": "all"
+              "namedChunks": true
             },
             "development": {
               "buildOptimizer": false,
