Fix Environment Variables

--- a/app/infra/railway/localstack/Dockerfile
+++ b/app/infra/railway/localstack/Dockerfile
@@ -2,7 +2,7 @@ FROM localstack/localstack:1.4.0
 
 ENV DEBUG=0
 ENV DEFAULT_REGION=sa-east-1
-ENV HOSTNAME=localstack
+ENV HOSTNAME_EXTERNAL=localstack
 ENV DOCKER_HOST=unix:///var/run/docker.sock
 
 COPY aws-scripts/ /docker-entrypoint-initaws.d/
