--- a/app/infra/railway/localstack/Dockerfile
+++ b/app/infra/railway/localstack/Dockerfile
@@ -1,9 +1,9 @@
 FROM localstack/localstack:1.4.0
 
-ENV DEBUG=0
-ENV DEFAULT_REGION=sa-east-1
-ENV HOSTNAME_EXTERNAL=localstack
-ENV DOCKER_HOST=unix:///var/run/docker.sock
+ENV DEBUG 0
+ENV DEFAULT_REGION "sa-east-1"
+ENV HOSTNAME_EXTERNAL "localstack.railway.internal"
+ENV DOCKER_HOST "unix:///var/run/docker.sock"
 
 COPY aws-scripts/ /docker-entrypoint-initaws.d/
 
