--- a/app/infra/railway/localstack/Dockerfile
+++ b/app/infra/railway/localstack/Dockerfile
@@ -1,11 +1,11 @@
-FROM localstack/localstack:1.4.0
+FROM localstack/localstack:2.1.0
 
 ENV DEBUG 0
 ENV DEFAULT_REGION "sa-east-1"
-ENV HOSTNAME_EXTERNAL "localstack.railway.internal"
+ENV LOCALSTACK_HOST "localstack.railway.internal"
 ENV DOCKER_HOST "unix:///var/run/docker.sock"
 
-COPY aws-scripts/ /docker-entrypoint-initaws.d/
+COPY aws-scripts/ /etc/localstack/init/ready.d/
 
 EXPOSE 53
 EXPOSE 443
