--- a/app/backend/notification-service/configuration/src/main/resources/application-test.yaml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-test.yaml
@@ -1,3 +1,18 @@
+spring:
+  cloud:
+    aws:
+      ses:
+        enabled: true
+        endpoint: http://localhost:4566
+        region: sa-east-1
+
+cloud:
+  aws:
+    stack:
+      enabled: false
+    region:
+      static: sa-east-1
+
 eureka:
   client:
     enabled: false
