--- a/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
@@ -3,7 +3,7 @@ spring:
     aws:
       ses:
         enabled: true
-        endpoint: http:/localstack-production.up.railway.app
+        endpoint: http://localstack-production.up.railway.app
         region: sa-east-1
   kafka:
     bootstrap-servers: kafka.railway.internal:29092
