--- a/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/bff-service/configuration/src/main/resources/application-prod.yml
@@ -11,9 +11,9 @@ spring:
   boot:
     admin:
       client:
-        url: https://service-discovery.up.railway.app/admin/
+        url: http://service-discovery.railway.internal:8761/admin/
         instance:
-          service-url: https://service-discovery.up.railway.app/admin/
+          service-url: http://service-discovery.railway.internal:8761/admin/
 
 eureka:
   instance:
@@ -22,7 +22,7 @@ eureka:
     enabled: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: https://service-discovery.up.railway.app/eureka/
+      defaultZone: http://service-discovery.railway.internal:8761/eureka/
 
 
 webservice:
