--- a/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
@@ -11,9 +11,9 @@ spring:
   boot:
     admin:
       client:
-        url: https://service-discovery.up.railway.app/admin/
+        url: http://service-discovery.railway.internal:8761/admin/
         instance:
-          service-url: https://service-discovery.up.railway.app/admin/
+          service-url: http://service-discovery.railway.internal:8761/admin/
   kafka:
     bootstrap-servers: kafka.railway.internal:29092
     properties:
@@ -26,7 +26,7 @@ eureka:
     enabled: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: https://service-discovery.up.railway.app/eureka/
+      defaultZone: http://service-discovery.railway.internal:8761/eureka/
 
 aws:
   dynamodb:
