--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -6,9 +6,9 @@ spring:
   boot:
     admin:
       client:
-        url: https://service-discovery.up.railway.app/admin/
+        url: http://service-discovery.railway.internal/admin/
         instance:
-          service-url: https://service-discovery.up.railway.app/admin/
+          service-url: http://service-discovery.railway.internal/admin/
 
 eureka:
   instance:
@@ -17,4 +17,4 @@ eureka:
     enabled: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: https://service-discovery.up.railway.app/eureka/
+      defaultZone: http://service-discovery.railway.internal/eureka/
