--- a/app/infra/railway/localstack/Dockerfile
+++ b/app/infra/railway/localstack/Dockerfile
@@ -2,10 +2,10 @@ FROM localstack/localstack:1.4.0
 
 ENV DEBUG 0
 ENV AWS_DEFAULT_REGION "sa-east-1"
-ENV HOSTNAME_EXTERNAL "localstack.railway.internal"
+ENV LOCALSTACK_HOST "localstack.railway.internal"
 ENV DOCKER_HOST "unix:///var/run/docker.sock"
 
-COPY aws-scripts/ /docker-entrypoint-initaws.d/
+COPY aws-scripts/init.sh /docker-entrypoint-initaws.d/init.sh
 
 EXPOSE 4566
 EXPOSE 4510-4559
