--- a/app/frontend/Procfile
+++ b/app/frontend/Procfile
@@ -1,1 +1,1 @@
-web: ng serve --configuration --disable-host-check true --host 0.0.0.0 --port 5000
+web: ng serve --configuration production --disable-host-check true --host 0.0.0.0 --port 5000
