Comment Env Vars

--- a/app/infra/railway/localstack/Dockerfile
+++ b/app/infra/railway/localstack/Dockerfile
@@ -1,7 +1,7 @@
 FROM localstack/localstack:2.0.2
 
 ENV DEBUG 0
-ENV LOCALSTACK_HOST "localstack"
+#ENV LOCALSTACK_HOST "localstack"
 ENV DOCKER_HOST "unix:///var/run/docker.sock"
 
 COPY ./aws-scripts/init.sh /etc/localstack/init/ready.d/init.sh
