--- a/app/infra/railway/localstack/Dockerfile
+++ b/app/infra/railway/localstack/Dockerfile
@@ -6,6 +6,5 @@ ENV DOCKER_HOST "unix:///var/run/docker.sock"
 
 COPY ./aws-scripts/init.sh /etc/localstack/init/ready.d/init.sh
 
-EXPOSE 4566
-#EXPOSE 4510-4559
+EXPOSE 4566 4510-4559 5678
 
