Add OpenAPI Doc

--- a/app/backend/bff-service/configuration/src/main/resources/application.yml
+++ b/app/backend/bff-service/configuration/src/main/resources/application.yml
@@ -40,6 +40,12 @@ eureka:
     enabled: true
     register-with-eureka: true
 
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /api-docs
+
 logging:
   level:
     org:
