--- a/app/backend/bff-service/adapters/web/build.gradle
+++ b/app/backend/bff-service/adapters/web/build.gradle
@@ -2,6 +2,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     //implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation "org.springdoc:springdoc-openapi-webflux-core:${springDocVersion}"
+    implementation "org.springdoc:springdoc-openapi-webflux-ui:${springDocVersion}"
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation 'org.springframework.security:spring-security-test'
 
