--- a/app/backend/product-service/build.gradle
+++ b/app/backend/product-service/build.gradle
@@ -43,6 +43,7 @@ subprojects {
 		set('springCloudVersion', "2021.0.7")
 		set('springDataCommonsVersion', "2.7.16")
 		set('springAdminVersion', "2.7.11")
+		set('springDocVersion', '1.7.0')
 		set('logstashVersion', "7.4")
 		set('assertJVersion', "3.24.2")
 		set('mockitoVersion', "5.4.0")
@@ -79,7 +80,7 @@ subprojects {
 		imports {
 			mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
 			mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
-			mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+			mavenBom("org.testcontainers:testcontainers-bom:${testcontainersVersion}")
 		}
 	}
 
