--- a/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
@@ -12,9 +12,10 @@ spring:
   boot:
     admin:
       client:
-        url: http://service-discovery.railway.internal:8761/admin/
+        url: http://service-discovery.railway.internal:8761/admin
         instance:
-          service-url: http://service-discovery.railway.internal:8761/admin/
+          management-base-url: http://service-discovery.railway.internal:8761/admin
+          service-url: http://service-discovery.railway.internal:8761/admin
 
 eureka:
   instance:
