--- a/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
@@ -17,6 +17,8 @@ spring:
 eureka:
   instance:
     hostname: prospect-leads-quote-service.railway.internal
+    lease-expiration-duration-in-seconds: 60
+    lease-renewal-interval-in-seconds: 30
   client:
     enabled: true
     register-with-eureka: true
