--- a/app/backend/lead-service/configuration/src/main/resources/application-test.yaml
+++ b/app/backend/lead-service/configuration/src/main/resources/application-test.yaml
@@ -1,3 +1,8 @@
+spring:
+  kafka:
+    bootstrap-servers: ${spring.embedded.kafka.brokers}
+    properties:
+      schema.registry.url: mock://http://localhost:8081
 eureka:
   client:
     enabled: false
