--- a/app/backend/notification-service/configuration/src/main/resources/application-test.yaml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-test.yaml
@@ -1,4 +1,8 @@
 spring:
+  kafka:
+    bootstrap-servers: ${spring.embedded.kafka.brokers}
+    properties:
+      schema.registry.url: mock://http://localhost:8081
   cloud:
     aws:
       ses:
