--- a/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
@@ -19,7 +19,7 @@ spring:
 
 eureka:
   instance:
-    hostname: prospect-leads-notification-service.railway.internal
+    hostname: notification-service.up.railway.app
     lease-expiration-duration-in-seconds: 60
     lease-renewal-interval-in-seconds: 30
   client:
