--- a/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
@@ -22,7 +22,7 @@ spring:
 
 eureka:
   instance:
-    hostname: prospect-leads-lead-service.railway.internal
+    hostname: prospect-leads-lead-service.up.railway.app
     lease-expiration-duration-in-seconds: 60
     lease-renewal-interval-in-seconds: 30
   client:
