--- a/app/infra/railway/localstack/Dockerfile
+++ b/app/infra/railway/localstack/Dockerfile
@@ -4,7 +4,7 @@ ENV DEBUG 0
 #ENV LOCALSTACK_HOST "localstack"
 ENV DOCKER_HOST "unix:///var/run/docker.sock"
 
-COPY ./aws-scripts/init.sh /etc/localstack/init/ready.d/init.sh
+COPY ./aws-scripts/ /etc/localstack/init/ready.d/
 
 EXPOSE 4566 4510-4559 5678
 
