--- a/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
@@ -5,6 +5,9 @@ spring:
         enabled: true
         endpoint: https://localstack-production.up.railway.app
         region: sa-east-1
+        credentials:
+          access-key: 'foo'
+          secret-key: 'bar'
   kafka:
     bootstrap-servers: kafka.railway.internal:29092
     properties:
