--- a/app/backend/notification-service/adapters/email/src/test/resources/application-test.yml
+++ b/app/backend/notification-service/adapters/email/src/test/resources/application-test.yml
@@ -1,10 +1,12 @@
 spring:
-  cloud:
-    aws:
-      ses:
-        enabled: true
-        endpoint: http://localhost:4566
-        region: sa-east-1
-        credentials:
-          access-key: 'foo'
-          secret-key: 'bar'
+  mail:
+    host: xxx
+    port: 587
+    username: xxxx@xxx.com
+    password: xxx
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
