--- a/app/backend/notification-service/configuration/src/main/resources/application.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
       enabled: true
   mail:
     host: ${SMTP_HOST}
-    port: 587
+    port: ${SMTP_PORT}
     username: ${SMTP_USER}
     password: ${SMTP_PASS}
     properties:
