--- a/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
@@ -25,6 +25,8 @@ spring:
 eureka:
   instance:
     hostname: notification-service.up.railway.app
+    non-secure-port-enabled: true
+    non-secure-port: ${server.port}
     lease-expiration-duration-in-seconds: 60
     lease-renewal-interval-in-seconds: 30
   client:
