--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -14,6 +14,8 @@ spring:
 eureka:
   instance:
     hostname: prospect-leads-product-service.up.railway.app
+    non-secure-port-enabled: true
+    non-secure-port: ${server.port}
     lease-expiration-duration-in-seconds: 60
     lease-renewal-interval-in-seconds: 30
   client:
