--- a/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
@@ -23,6 +23,8 @@ spring:
 eureka:
   instance:
     hostname: prospect-leads-lead-service.up.railway.app
+    non-secure-port-enabled: true
+    non-secure-port: ${server.port}
     lease-expiration-duration-in-seconds: 60
     lease-renewal-interval-in-seconds: 30
   client:
